@@ -13,18 +13,32 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package com.hedera.services.bdd.spec;
 
+import static com.hedera.services.bdd.junit.RecordStreamAccess.RECORD_STREAM_ACCESS;
 import static com.hedera.services.bdd.spec.HapiPropertySource.asSources;
 import static com.hedera.services.bdd.spec.HapiPropertySource.inPriorityOrder;
 import static com.hedera.services.bdd.spec.HapiSpec.CostSnapshotMode.COMPARE;
 import static com.hedera.services.bdd.spec.HapiSpec.CostSnapshotMode.TAKE;
 import static com.hedera.services.bdd.spec.HapiSpec.SpecStatus.*;
+import static com.hedera.services.bdd.spec.assertions.TransactionRecordAsserts.recordWith;
 import static com.hedera.services.bdd.spec.infrastructure.HapiApiClients.clientsFor;
+import static com.hedera.services.bdd.spec.queries.QueryVerbs.getScheduleInfo;
+import static com.hedera.services.bdd.spec.queries.QueryVerbs.getTxnRecord;
+import static com.hedera.services.bdd.spec.transactions.TxnVerbs.scheduleCreate;
+import static com.hedera.services.bdd.spec.transactions.TxnVerbs.scheduleSign;
 import static com.hedera.services.bdd.spec.utilops.UtilStateChange.*;
+import static com.hedera.services.bdd.spec.utilops.UtilVerbs.blockingOrder;
+import static com.hedera.services.bdd.spec.utilops.UtilVerbs.noOp;
 import static com.hedera.services.bdd.spec.utilops.UtilVerbs.overridingAllOf;
 import static com.hedera.services.bdd.spec.utilops.UtilVerbs.remembering;
+import static com.hedera.services.bdd.suites.HapiSuite.DEFAULT_PAYER;
 import static com.hedera.services.bdd.suites.HapiSuite.ETH_SUFFIX;
+import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INVALID_SIGNATURE;
+import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.NO_NEW_VALID_SIGNATURES;
+import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.OK;
+import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.SUCCESS;
 import static java.util.concurrent.CompletableFuture.allOf;
 import static java.util.concurrent.CompletableFuture.runAsync;
 import static java.util.concurrent.TimeUnit.MILLISECONDS;
@@ -42,10 +56,14 @@ import com.hedera.services.bdd.spec.infrastructure.HapiSpecRegistry;
 import com.hedera.services.bdd.spec.keys.KeyFactory;
 import com.hedera.services.bdd.spec.persistence.EntityManager;
 import com.hedera.services.bdd.spec.props.MapPropertySource;
+import com.hedera.services.bdd.spec.transactions.HapiTxnOp;
 import com.hedera.services.bdd.spec.transactions.TxnFactory;
 import com.hedera.services.bdd.spec.utilops.UtilVerbs;
+import com.hedera.services.bdd.spec.utilops.streams.RecordAssertions;
+import com.hedera.services.bdd.spec.utilops.streams.assertions.EventualRecordStreamAssertion;
 import com.hedera.services.stream.proto.AllAccountBalances;
 import com.hedera.services.stream.proto.SingleAccountBalances;
+import com.hederahashgraph.api.proto.java.Key;
 import com.hederahashgraph.api.proto.java.ResponseCodeEnum;
 import java.io.File;
 import java.io.FileOutputStream;
@@ -62,6 +80,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Properties;
+import java.util.SplittableRandom;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.PriorityBlockingQueue;
@@ -70,6 +89,7 @@ import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 import java.util.function.Function;
@@ -81,8 +101,9 @@ import org.apache.logging.log4j.Logger;
 import org.checkerframework.checker.nullness.qual.Nullable;
 
 public class HapiSpec implements Runnable {
-    private static final String CI_PROPS_FLAG_FOR_NO_UNRECOVERABLE_NETWORK_FAILURES =
-            "suppressNetworkFailures";
+    private static final AtomicLong NEXT_AUTO_SCHEDULE_NUM = new AtomicLong(1);
+    private static final SplittableRandom RANDOM = new SplittableRandom();
+    private static final String CI_PROPS_FLAG_FOR_NO_UNRECOVERABLE_NETWORK_FAILURES = "suppressNetworkFailures";
     private static final ThreadPoolExecutor THREAD_POOL =
             new ThreadPoolExecutor(0, 10_000, 250, MILLISECONDS, new SynchronousQueue<>());
 
@@ -150,10 +171,8 @@ public class HapiSpec implements Runnable {
     CompletableFuture<Void> finalizingFuture;
     AtomicReference<Optional<Failure>> finishingError = new AtomicReference<>(Optional.empty());
     BlockingQueue<HapiSpecOpFinisher> pendingOps = new PriorityBlockingQueue<>();
-    EnumMap<ResponseCodeEnum, AtomicInteger> precheckStatusCounts =
-            new EnumMap<>(ResponseCodeEnum.class);
-    EnumMap<ResponseCodeEnum, AtomicInteger> finalizedStatusCounts =
-            new EnumMap<>(ResponseCodeEnum.class);
+    EnumMap<ResponseCodeEnum, AtomicInteger> precheckStatusCounts = new EnumMap<>(ResponseCodeEnum.class);
+    EnumMap<ResponseCodeEnum, AtomicInteger> finalizedStatusCounts = new EnumMap<>(ResponseCodeEnum.class);
 
     List<SingleAccountBalances> accountBalances = new ArrayList<>();
 
@@ -161,7 +180,8 @@ public class HapiSpec implements Runnable {
      * When this spec's final status is {@code FAILED}, contains the information on the failed
      * assertion that terminated {@code exec()}.
      */
-    @Nullable private Failure failure = null;
+    @Nullable
+    private Failure failure = null;
 
     public static ThreadPoolExecutor getCommonThreadPool() {
         return THREAD_POOL;
@@ -281,9 +301,8 @@ public class HapiSpec implements Runnable {
             if (!isEthereumAccountCreatedForSpec(this)) {
                 initializeEthereumAccountForSpec(this);
             }
-            ops =
-                    UtilVerbs.convertHapiCallsToEthereumCalls(
-                            Stream.of(given, when, then).flatMap(Arrays::stream).toList());
+            ops = UtilVerbs.convertHapiCallsToEthereumCalls(
+                    Stream.of(given, when, then).flatMap(Arrays::stream).toList());
         }
 
         exec(ops);
@@ -336,8 +355,7 @@ public class HapiSpec implements Runnable {
                     return false;
                 } else {
                     log.warn(
-                            "Hedera service is not reachable. Will wait and try connect again for"
-                                    + " {} seconds...",
+                            "Hedera service is not reachable. Will wait and try connect again for" + " {} seconds...",
                             secsWait);
                     try {
                         Thread.sleep(1000);
@@ -390,9 +408,7 @@ public class HapiSpec implements Runnable {
         if (hapiSetup.requiresPersistentEntities()) {
             List<HapiSpecOperation> creationOps = entities.requiredCreations();
             if (!creationOps.isEmpty()) {
-                log.info(
-                        "Inserting {} required creations to establish persistent entities.",
-                        creationOps.size());
+                log.info("Inserting {} required creations to establish persistent entities.", creationOps.size());
                 ops = Stream.concat(creationOps.stream(), ops.stream()).toList();
             }
         }
@@ -402,18 +418,34 @@ public class HapiSpec implements Runnable {
             startFinalizingOps();
         }
         final var shouldPreserveProps = !propertiesToPreserve.isEmpty();
-        final Map<String, String> preservedProperties =
-                shouldPreserveProps ? new HashMap<>() : Collections.emptyMap();
+        final Map<String, String> preservedProperties = shouldPreserveProps ? new HashMap<>() : Collections.emptyMap();
         if (shouldPreserveProps) {
             ops = new ArrayList<>(ops);
             ops.add(0, remembering(preservedProperties, propertiesToPreserve));
         }
+        final var autoScheduled = setup().txnTypesToSchedule();
+        if (!autoScheduled.isEmpty()) {
+            log.info("Auto-scheduling {}", autoScheduled);
+        }
+        @Nullable List<EventualRecordStreamAssertion> assertions = null;
         for (HapiSpecOperation op : ops) {
+            if (!autoScheduled.isEmpty() && op.shouldSkipWhenAutoScheduling(autoScheduled)) {
+                continue;
+            }
+            if (op instanceof EventualRecordStreamAssertion recordStreamAssertion) {
+                if (assertions == null) {
+                    assertions = new ArrayList<>();
+                }
+                assertions.add(recordStreamAssertion);
+            } else if (op instanceof HapiTxnOp txn && autoScheduled.contains(txn.type())) {
+                op = autoScheduledSequenceFor(txn);
+            }
             Optional<Throwable> error = op.execFor(this);
             Failure asyncFailure = null;
             if (error.isPresent() || (asyncFailure = finishingError.get().orElse(null)) != null) {
                 status = FAILED;
-                failure = error.map(t -> new Failure(t, op.toString())).orElse(asyncFailure);
+                final var failedOp = op;
+                failure = error.map(t -> new Failure(t, failedOp.toString())).orElse(asyncFailure);
                 break;
             } else {
                 log.info("'{}' finished initial execution of {}", name, op);
@@ -432,78 +464,224 @@ public class HapiSpec implements Runnable {
         if (!preservedProperties.isEmpty()) {
             final var restoration = overridingAllOf(preservedProperties);
             Optional<Throwable> error = restoration.execFor(this);
-            error.ifPresent(
-                    t -> {
-                        status = FAILED;
-                        failure = new Failure(t, restoration.toString());
-                    });
+            error.ifPresent(t -> {
+                status = FAILED;
+                failure = new Failure(t, restoration.toString());
+            });
+        }
+        if (status == PASSED) {
+            final var maybeRecordStreamError = checkRecordStream(assertions);
+            if (maybeRecordStreamError.isPresent()) {
+                status = FAILED;
+                failure = maybeRecordStreamError.get();
+            }
         }
 
         tearDown();
         log.info("{}final status: {}!", logPrefix(), status);
 
-        if (hapiSetup.requiresPersistentEntities()
-                && hapiSetup.updateManifestsForCreatedPersistentEntities()) {
+        if (hapiSetup.requiresPersistentEntities() && hapiSetup.updateManifestsForCreatedPersistentEntities()) {
             entities.updateCreatedEntityManifests();
         }
     }
 
+    /**
+     * Given a transaction, creates a sequence of operations that schedules the
+     * transaction and validates its execution and record. This sequence of
+     * operations looks like,
+     * <ol>
+     *     <li>A {@code ScheduleCreate} using the default payer, and including
+     *     zero or more of the required signing keys for the transaction.</li>
+     *     <li>Zero or more {@code ScheduleSign}'s targeting the created
+     *     schedule, each including one or more of the required signing keys
+     *     not used with the {@code ScheduleCreate}.</li>
+     *     <li>A {@code ScheduleInfo} query that verifies the schedule has been
+     *     executed (unless the expected pre-check or status of the transaction
+     *     was {@code INVALID_SIGNATURE}, in which case the schedule shouldn't
+     *     have been executed.)</li>
+     *     <li>A {@code GetTransactionRecord} query that verifies the triggered
+     *     transaction had the expected status (unless the expected pre-check
+     *     or status of the transaction was {@code INVALID_SIGNATURE}).</li>
+     * </ol>
+     *
+     * @param txn the transaction to auto-schedule
+     * @return the sequence of operations that auto-schedules the transaction
+     */
+    private HapiSpecOperation autoScheduledSequenceFor(final HapiTxnOp<?> txn) {
+        // For the signatures to have the expected semantics, we must
+        // incorporate any signature control overrides into this spec
+        final var sigControlOverrides = txn.setKeyControlOverrides(this);
+        if (!sigControlOverrides.isEmpty()) {
+            sigControlOverrides.forEach((key, control) -> keys().setControl(key, control));
+        }
+
+        final var scheduleCreatePayerKey = registry().getKey(DEFAULT_PAYER);
+        final var signingKeys = txn.signersToUseFor(this).stream()
+                // Skip empty keys, which will have no required signatures, but
+                // should be rejected at consensus in most cases
+                .filter(key -> !isEmpty(key))
+                // The ScheduleCreate uses the default payer key, so we should
+                // ignore it for signing requirement purposes
+                .filter(key -> !scheduleCreatePayerKey.equals(key))
+                // Without this we would commonly repeat the payer key and run
+                // into SCHEDULE_ALREADY_EXECUTED
+                .distinct()
+                .toList();
+        final var numKeys = signingKeys.size();
+        final var numSignTxns = RANDOM.nextInt(numKeys + 1);
+        final var indices = createAndSignIndicesGiven(numKeys, numSignTxns);
+        // One slot for the ScheduleCreate, one for each ScheduleSign,
+        // one for the GetScheduleInfo, and one for the GetTxnRecord
+        final var orderedOps = new HapiSpecOperation[1 + numSignTxns + 2];
+        final var num = NEXT_AUTO_SCHEDULE_NUM.getAndIncrement();
+        final var schedule = "autoScheduled" + num;
+        final var creation = "autoScheduleCreation" + num;
+        orderedOps[0] = scheduleCreate(schedule, txn)
+                .alsoSigningWithExplicit(signingKeys.subList(indices.get(0), indices.get(1)))
+                .savingExpectedScheduledTxnId()
+                .via(creation);
+        for (int i = 1, n = indices.size(); i < n - 1; i++) {
+            orderedOps[i] = scheduleSign(schedule)
+                    .alsoSigningWithExplicit(signingKeys.subList(indices.get(i), indices.get(i + 1)))
+                    // It's likely that some of the top-level transaction's signing keys will already
+                    // be present (e.g. the default payer's signature), so we accommodate that here
+                    // by adding NO_NEW_VALID_SIGNATURES to the list of acceptable statuses
+                    .hasKnownStatusFrom(SUCCESS, NO_NEW_VALID_SIGNATURES);
+        }
+
+        final var expectedStatus =
+                (txn.getExpectedPrecheck() == OK) ? txn.getExpectedStatus() : txn.getExpectedPrecheck();
+        final var scheduleStateAssertion = getScheduleInfo(schedule);
+        // If the original transaction was supposed to fail with INVALID_SIGNATURE,
+        // then the schedule should not have been executed
+        if (expectedStatus != INVALID_SIGNATURE) {
+            scheduleStateAssertion.isExecuted();
+        } else {
+            scheduleStateAssertion.isNotExecuted();
+        }
+        orderedOps[orderedOps.length - 2] = scheduleStateAssertion;
+
+        if (expectedStatus != INVALID_SIGNATURE) {
+            final var recordAssertion = getTxnRecord(creation)
+                    .scheduledBy(schedule)
+                    .hasPriority(recordWith().status(expectedStatus));
+            orderedOps[orderedOps.length - 1] = recordAssertion;
+        } else {
+            // If the original transaction was supposed to fail with INVALID_SIGNATURE, there
+            // will be no scheduled transaction record to retrieve, so just use noOp()
+            orderedOps[orderedOps.length - 1] = noOp();
+        }
+        return blockingOrder(orderedOps);
+    }
+
+    private boolean isEmpty(final Key key) {
+        if (key.hasKeyList()) {
+            return key.getKeyList().getKeysCount() == 0
+                    || key.getKeyList().getKeysList().stream().allMatch(this::isEmpty);
+        } else if (key.hasThresholdKey()) {
+            return key.getThresholdKey().getKeys().getKeysCount() == 0
+                    || key.getThresholdKey().getKeys().getKeysList().stream().allMatch(this::isEmpty);
+        } else {
+            return false;
+        }
+    }
+
+    /**
+     * Given the number of keys that will be used to sign the transaction, and the number of
+     * {@code ScheduleSign} transactions that will be executed, create a list of indices that
+     * can be used to choose which keys to sign with in both the initial {@code ScheduleCreate},
+     * and any {@code ScheduleSign} transactions.
+     *
+     * @param numKeys the number of keys that will be used to sign the transaction
+     * @param numSignTxns the number of {@code ScheduleSign} transactions that will be executed
+     * @return a list of indices that can be used to choose signing keys
+     */
+    private static List<Integer> createAndSignIndicesGiven(final int numKeys, final int numSignTxns) {
+        final List<Integer> endIndices = new ArrayList<>();
+        endIndices.add(numKeys);
+        int remainingSkipsAllowed = numKeys - numSignTxns;
+        for (int i = 0; i < numSignTxns; i++) {
+            final var skips = remainingSkipsAllowed > 0 ? RANDOM.nextInt(remainingSkipsAllowed) : 0;
+            remainingSkipsAllowed -= skips;
+            final var curIndex = endIndices.get(0);
+            final var nextEndIndex = curIndex - skips - 1;
+            endIndices.add(0, nextEndIndex);
+        }
+        endIndices.add(0, 0);
+        return endIndices;
+    }
+
+    private Optional<Failure> checkRecordStream(@Nullable final List<EventualRecordStreamAssertion> assertions) {
+        if (assertions == null) {
+            return Optional.empty();
+        }
+        log.info("Checking record stream for {} assertions", assertions.size());
+        Optional<Failure> answer = Optional.empty();
+        // Keep submitting transactions to close record files (in almost every case, just
+        // one file will need to be closed, since it's very rare to have a long-running spec)
+        final var backgroundTraffic = THREAD_POOL.submit(() -> {
+            while (true) {
+                try {
+                    RecordAssertions.triggerAndCloseAtLeastOneFile(this);
+                } catch (final InterruptedException ignore) {
+                    Thread.currentThread().interrupt();
+                    return;
+                }
+            }
+        });
+        for (final var assertion : assertions) {
+            log.info("Checking record stream for {}", assertion);
+            try {
+                // Each blocks until the assertion passes or times out
+                assertion.assertHasPassed();
+            } catch (final Throwable t) {
+                log.warn("{}{} failed", logPrefix(), assertion, t);
+                answer = Optional.of(new Failure(t, assertion.toString()));
+                break;
+            }
+        }
+
+        backgroundTraffic.cancel(true);
+        RECORD_STREAM_ACCESS.stopMonitorIfNoSubscribers();
+        return answer;
+    }
+
     private void startFinalizingOps() {
-        finalizingExecutor =
-                new ThreadPoolExecutor(
-                        hapiSetup.numOpFinisherThreads(),
-                        hapiSetup.numOpFinisherThreads(),
-                        0,
-                        TimeUnit.SECONDS,
-                        new SynchronousQueue<>());
-        finalizingFuture =
-                allOf(
-                        IntStream.range(0, hapiSetup.numOpFinisherThreads())
-                                .mapToObj(
-                                        ignore ->
-                                                runAsync(
-                                                        () -> {
-                                                            while (true) {
-                                                                HapiSpecOpFinisher op =
-                                                                        pendingOps.poll();
-                                                                if (op != null) {
-                                                                    if (status != FAILED
-                                                                            && finishingError
-                                                                                    .get()
-                                                                                    .isEmpty()) {
-                                                                        try {
-                                                                            op.finishFor(this);
-                                                                        } catch (Throwable t) {
-                                                                            log.warn(
-                                                                                    "{}{} failed!",
-                                                                                    logPrefix(),
-                                                                                    op);
-                                                                            finishingError.set(
-                                                                                    Optional.of(
-                                                                                            new Failure(
-                                                                                                    t,
-                                                                                                    op
-                                                                                                            .toString())));
-                                                                        }
-                                                                    }
-                                                                } else {
-                                                                    if (allOpsSubmitted.get()) {
-                                                                        break;
-                                                                    } else {
-                                                                        try {
-                                                                            MILLISECONDS.sleep(500);
-                                                                        } catch (
-                                                                                InterruptedException
-                                                                                        ignored) {
-                                                                            Thread.currentThread()
-                                                                                    .interrupt();
-                                                                        }
-                                                                    }
-                                                                }
-                                                            }
-                                                        },
-                                                        finalizingExecutor))
-                                .toArray(CompletableFuture[]::new));
+        finalizingExecutor = new ThreadPoolExecutor(
+                hapiSetup.numOpFinisherThreads(),
+                hapiSetup.numOpFinisherThreads(),
+                0,
+                TimeUnit.SECONDS,
+                new SynchronousQueue<>());
+        finalizingFuture = allOf(IntStream.range(0, hapiSetup.numOpFinisherThreads())
+                .mapToObj(ignore -> runAsync(
+                        () -> {
+                            while (true) {
+                                HapiSpecOpFinisher op = pendingOps.poll();
+                                if (op != null) {
+                                    if (status != FAILED && finishingError.get().isEmpty()) {
+                                        try {
+                                            op.finishFor(this);
+                                        } catch (Throwable t) {
+                                            log.warn("{}{} failed!", logPrefix(), op);
+                                            finishingError.set(Optional.of(new Failure(t, op.toString())));
+                                        }
+                                    }
+                                } else {
+                                    if (allOpsSubmitted.get()) {
+                                        break;
+                                    } else {
+                                        try {
+                                            MILLISECONDS.sleep(500);
+                                        } catch (InterruptedException ignored) {
+                                            Thread.currentThread().interrupt();
+                                        }
+                                    }
+                                }
+                            }
+                        },
+                        finalizingExecutor))
+                .toArray(CompletableFuture[]::new));
     }
 
     @SuppressWarnings("java:S2629")
@@ -606,8 +784,7 @@ public class HapiSpec implements Runnable {
 
     private static Def.Given internalDefaultHapiSpec(
             final String name, final boolean isOnly, final List<String> propertiesToPreserve) {
-        final Stream<Map<String, String>> prioritySource =
-                runningInCi ? Stream.of(ciPropOverrides()) : Stream.empty();
+        final Stream<Map<String, String>> prioritySource = runningInCi ? Stream.of(ciPropOverrides()) : Stream.empty();
         return customizedHapiSpec(isOnly, name, prioritySource, propertiesToPreserve)
                 .withProperties();
     }
@@ -615,9 +792,7 @@ public class HapiSpec implements Runnable {
     public static Map<String, String> ciPropOverrides() {
         if (ciPropsSource == null) {
             dynamicNodes =
-                    Stream.of(dynamicNodes.split(","))
-                            .map(s -> s + ":" + 50211)
-                            .collect(joining(","));
+                    Stream.of(dynamicNodes.split(",")).map(s -> s + ":" + 50211).collect(joining(","));
             String ciPropertiesMap =
                     Optional.ofNullable(System.getenv("CI_PROPERTIES_MAP")).orElse("");
             log.info("CI_PROPERTIES_MAP: {}", ciPropertiesMap);
@@ -642,24 +817,19 @@ public class HapiSpec implements Runnable {
     }
 
     public static Def.Given defaultFailingHapiSpec(String name) {
-        final Stream<Map<String, String>> prioritySource =
-                Stream.of(
-                        runningInCi ? ciPropOverrides() : Collections.emptyMap(),
-                        Map.of("expected.final.status", "FAILED"));
+        final Stream<Map<String, String>> prioritySource = Stream.of(
+                runningInCi ? ciPropOverrides() : Collections.emptyMap(), Map.of("expected.final.status", "FAILED"));
         return customizedHapiSpec(false, name, prioritySource).withProperties();
     }
 
     public static Def.Sourced customHapiSpec(String name) {
-        final Stream<Map<String, String>> prioritySource =
-                runningInCi ? Stream.of(ciPropOverrides()) : Stream.empty();
+        final Stream<Map<String, String>> prioritySource = runningInCi ? Stream.of(ciPropOverrides()) : Stream.empty();
         return customizedHapiSpec(false, name, prioritySource);
     }
 
     public static Def.Sourced customFailingHapiSpec(String name) {
         final Stream<Map<String, String>> prioritySource =
-                runningInCi
-                        ? Stream.of(ciPropOverrides(), Map.of("expected.final.status", "FAILED"))
-                        : Stream.empty();
+                runningInCi ? Stream.of(ciPropOverrides(), Map.of("expected.final.status", "FAILED")) : Stream.empty();
         return customizedHapiSpec(false, name, prioritySource);
     }
 
@@ -674,16 +844,11 @@ public class HapiSpec implements Runnable {
             final Stream<T> prioritySource,
             final List<String> propertiesToPreserve) {
         return (Object... sources) -> {
-            Object[] allSources =
-                    Stream.of(
-                                    prioritySource,
-                                    Stream.of(sources),
-                                    Stream.of(HapiSpecSetup.getDefaultPropertySource()))
-                            .flatMap(Function.identity())
-                            .toArray();
-            return (isOnly
-                            ? onlyHapiSpec(name, propertiesToPreserve)
-                            : hapiSpec(name, propertiesToPreserve))
+            Object[] allSources = Stream.of(
+                            prioritySource, Stream.of(sources), Stream.of(HapiSpecSetup.getDefaultPropertySource()))
+                    .flatMap(Function.identity())
+                    .toArray();
+            return (isOnly ? onlyHapiSpec(name, propertiesToPreserve) : hapiSpec(name, propertiesToPreserve))
                     .withSetup(setupFrom(allSources));
         };
     }
@@ -694,33 +859,12 @@ public class HapiSpec implements Runnable {
 
     public static Def.Setup hapiSpec(String name, List<String> propertiesToPreserve) {
         return setup ->
-                given ->
-                        when ->
-                                then ->
-                                        new HapiSpec(
-                                                name,
-                                                false,
-                                                setup,
-                                                given,
-                                                when,
-                                                then,
-                                                propertiesToPreserve);
+                given -> when -> then -> new HapiSpec(name, false, setup, given, when, then, propertiesToPreserve);
     }
 
-    public static Def.Setup onlyHapiSpec(
-            final String name, final List<String> propertiesToPreserve) {
+    public static Def.Setup onlyHapiSpec(final String name, final List<String> propertiesToPreserve) {
         return setup ->
-                given ->
-                        when ->
-                                then ->
-                                        new HapiSpec(
-                                                name,
-                                                true,
-                                                setup,
-                                                given,
-                                                when,
-                                                then,
-                                                propertiesToPreserve);
+                given -> when -> then -> new HapiSpec(name, true, setup, given, when, then, propertiesToPreserve);
     }
 
     private HapiSpec(
@@ -745,8 +889,7 @@ public class HapiSpec implements Runnable {
             keyFactory = new KeyFactory(hapiSetup, hapiRegistry);
             txnFactory = new TxnFactory(hapiSetup, keyFactory);
             FeesAndRatesProvider scheduleProvider =
-                    new FeesAndRatesProvider(
-                            txnFactory, keyFactory, hapiSetup, hapiClients, hapiRegistry);
+                    new FeesAndRatesProvider(txnFactory, keyFactory, hapiSetup, hapiClients, hapiRegistry);
             feeCalculator = new FeeCalculator(hapiSetup, scheduleProvider);
             this.ratesProvider = scheduleProvider;
         } catch (Throwable t) {
@@ -789,10 +932,8 @@ public class HapiSpec implements Runnable {
 
     @Override
     public String toString() {
-        final SpecStatus passingSpecStatus =
-                ((status == PASSED) && notOk(this)) ? PASSED_UNEXPECTEDLY : status;
-        final SpecStatus resolved =
-                ((status == FAILED) && ok(this)) ? FAILED_AS_EXPECTED : passingSpecStatus;
+        final SpecStatus passingSpecStatus = ((status == PASSED) && notOk(this)) ? PASSED_UNEXPECTEDLY : status;
+        final SpecStatus resolved = ((status == FAILED) && ok(this)) ? FAILED_AS_EXPECTED : passingSpecStatus;
         return MoreObjects.toStringHelper("Spec")
                 .add("name", name)
                 .add("status", resolved)
@@ -832,8 +973,7 @@ public class HapiSpec implements Runnable {
             Properties deserializedCosts = new Properties();
             for (int i = 0; i < costs.size(); i++) {
                 Payment cost = costs.get(i);
-                deserializedCosts.put(
-                        String.format("%d.%s", i, cost.entryName()), "" + cost.tinyBars);
+                deserializedCosts.put(String.format("%d.%s", i, cost.entryName()), "" + cost.tinyBars);
             }
             File file = new File(costSnapshotFilePath());
             CharSink sink = Files.asCharSink(file, StandardCharsets.UTF_8);
@@ -859,16 +999,15 @@ public class HapiSpec implements Runnable {
             throw new IllegalArgumentException(ie);
         }
         Map<Integer, Payment> costsByOrder = new HashMap<>();
-        serializedCosts.forEach(
-                (a, b) -> {
-                    String meta = (String) a;
-                    long amount = Long.parseLong((String) b);
-                    int i = meta.indexOf(".");
-                    costsByOrder.put(
-                            Integer.valueOf(meta.substring(0, i)),
-                            Payment.fromEntry(meta.substring(i + 1), amount));
-                });
-        return IntStream.range(0, costsByOrder.size()).mapToObj(costsByOrder::get).toList();
+        serializedCosts.forEach((a, b) -> {
+            String meta = (String) a;
+            long amount = Long.parseLong((String) b);
+            int i = meta.indexOf(".");
+            costsByOrder.put(Integer.valueOf(meta.substring(0, i)), Payment.fromEntry(meta.substring(i + 1), amount));
+        });
+        return IntStream.range(0, costsByOrder.size())
+                .mapToObj(costsByOrder::get)
+                .toList();
     }
 
     private String costSnapshotFile() {
@@ -882,8 +1021,7 @@ public class HapiSpec implements Runnable {
         ensureDir(dir);
         dir += ("/" + hapiSetup.costSnapshotDir());
         ensureDir(dir);
-        return String.format(
-                "cost-snapshots/%s/%s", hapiSetup.costSnapshotDir(), costSnapshotFile());
+        return String.format("cost-snapshots/%s/%s", hapiSetup.costSnapshotDir(), costSnapshotFile());
     }
 
     /**
@@ -902,8 +1040,7 @@ public class HapiSpec implements Runnable {
             if (f.mkdirs()) {
                 log.info("Created directory: {}", f.getAbsolutePath());
             } else {
-                throw new IllegalStateException(
-                        "Failed to create directory: " + f.getAbsolutePath());
+                throw new IllegalStateException("Failed to create directory: " + f.getAbsolutePath());
             }
         }
     }
